Multiples targetless IKs in a chain gives weird behaviour (known as FakeIK for FK posing) #67232

Closed
opened 2019-07-19 16:12:22 +02:00 by Sidney Moraes Jr · 15 comments

System Information
Operating system: Windows 10
Graphics card: GTX 1070

Blender Version
Broken: 2.80RC2
Worked: ≤ 2.79

Short description of error
Translating the last bone in the chain everything works well (it actually rotates all the bones in the targtless IK chain). The problem is to Translate other targetless IK bone in the middle of the chain, causing the last bone not to update in realtime, but applies correctly at the confirmation.

Exact steps for others to reproduce the error
Press G to move the hand bone from the blend file. It'll work correctly. Select the lowerArm bone and repeat the process, pressing G to translate it. The hand won't update until you confirm the action.
FakeIK.blend

Probable related issue: #61621

**System Information** Operating system: Windows 10 Graphics card: GTX 1070 **Blender Version** Broken: 2.80RC2 Worked: ≤ 2.79 **Short description of error** Translating the last bone in the chain everything works well (it actually rotates all the bones in the targtless IK chain). The problem is to Translate other targetless IK bone in the middle of the chain, causing the last bone not to update in realtime, but applies correctly at the confirmation. **Exact steps for others to reproduce the error** Press G to move the hand bone from the blend file. It'll work correctly. Select the lowerArm bone and repeat the process, pressing G to translate it. The hand won't update until you confirm the action. [FakeIK.blend](https://archive.blender.org/developer/F7618224/FakeIK.blend) Probable related issue: #61621

Added subscriber: @SidneyMoraesJr

Added subscriber: @SidneyMoraesJr

#67473 was marked as duplicate of this issue

#67473 was marked as duplicate of this issue
Alexander Gavrilov was assigned by Sebastian Parborg 2019-07-23 15:30:06 +02:00

There is no such thing as "Fake IK". This is obviously some kind of weird bug that for some reason triggers what is actually called the "Auto IK" feature. If you simply enable the "Auto IK" option without using any weird hacks, it works as expected.

There is no such thing as "Fake IK". This is obviously some kind of weird bug that for some reason triggers what is actually called the "Auto IK" feature. If you simply enable the "Auto IK" option without using any weird hacks, it works as expected.

Yes, you are right. Some artists calls it to differ from the AutoIK option, since it has an IK constrain in a limited chain and it still is FK but moves like IK to pose. That is why the "FakeIK" term among some artists.
Terms aside, here is the problem:
AutoIK_not_working_Properly.gif

It gets really ugly in a character:
AutoIK_Char_not_working_Properly.gif

As additional (and probably not useful) information about AutoIK: As an animator this is one of the most important feature that makes posing in FK easy and faster. It is so natural versus the awkward 'rotating each bone from chain'. So, thanks for this feature!

Yes, you are right. Some artists calls it to differ from the AutoIK option, since it has an IK constrain in a limited chain and it still is FK but moves like IK to pose. That is why the "FakeIK" term among some artists. Terms aside, here is the problem: ![AutoIK_not_working_Properly.gif](https://archive.blender.org/developer/F7624867/AutoIK_not_working_Properly.gif) It gets really ugly in a character: ![AutoIK_Char_not_working_Properly.gif](https://archive.blender.org/developer/F7624879/AutoIK_Char_not_working_Properly.gif) As additional (and probably not useful) information about AutoIK: As an animator this is one of the most important feature that makes posing in FK easy and faster. It is so natural versus the awkward 'rotating each bone from chain'. So, thanks for this feature!

Added subscribers: @GaiaClary, @ErikFernandes

Added subscribers: @GaiaClary, @ErikFernandes
Alexander Gavrilov was unassigned by Dalai Felinto 2019-12-23 16:33:40 +01:00

Added subscriber: @angavrilov

Added subscriber: @angavrilov

Added subscriber: @mano-wii

Added subscriber: @mano-wii

This has already been resolved.

This has already been resolved.

Closed as duplicate of #73051

Closed as duplicate of #73051

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

Changed status from 'Duplicate' to: 'Confirmed'

Changed status from 'Duplicate' to: 'Confirmed'

@mano-wii This is not the same issue as #73051.

Worked: >= 2.79

Well that's solved then, because 2.82 >= 2.79. I guess this has to be "Worked: ≤ 2.79"

@mano-wii This is not the same issue as #73051. > Worked: >= 2.79 Well that's solved then, because 2.82 >= 2.79. I guess this has to be "Worked: ≤ 2.79"
Sybren A. Stüvel self-assigned this 2020-02-24 15:35:46 +01:00
Sybren A. Stüvel removed their assignment 2020-03-10 10:53:52 +01:00

I'm unassigning myself, so that someone with more experience with the IK code can pick it up.

I'm unassigning myself, so that someone with more experience with the IK code can pick it up.
Sebastian Parborg self-assigned this 2020-04-10 10:34:26 +02:00

This issue was referenced by 9a7f5f1bb4

This issue was referenced by 9a7f5f1bb42292eeb70b4832e7883846df0cb76a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67232
No description provided.